# midimaxe

./: .gitignore  Cargo.toml  README.md  flake.nix  result
keycode/: Cargo.toml
keycode/src/: main.rs
midimaxe/: Cargo.toml
midimaxe/src/: main.rs  midisync.rs  multisync.rs  programclock.rs  ui.rs
sync_checker/: Cargo.toml
sync_checker/src/: main.rs
tools/link-dissector/: README.md  ableton-link.lua
utils/: Cargo.toml
utils/src/: circularbuffer.rs  lib.rs  midimessages.rs  programclock.rs
