[package]
name = "midimaxe"
version = "1.0.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
midir = "0.10"
ratatui = "0.26.3"
tui-big-text = "0.4.4"
time = "0.3"
crossbeam-channel = "0.5"
midly = "0.5"
anyhow = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utils = { path = "../utils" }

[profile.release]
debug = true

